[package]
name = "farcaster"
version = "0.2.1"
authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
edition = "2021"
license = "MIT"
description = "Utility to securely fire commands and arbitrary data to a server over TCP"
readme = "README.md"
repository = "https://github.com/FerrahWolfeh/farcaster"

[dependencies]
log = "0.4.17"
bincode = "1.3.3"
thiserror = "1.0.38"
thiserror-impl = "1.0.38"
aes-gcm = "0.10.1"

[dependencies.serde]
version = "1"
features = ["derive"]
